@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.12 2004/04/13 00:07:51 karl Exp $
+# $Id: Makefile.am,v 1.13 2004/07/11 01:02:35 karl Exp $
 # Makefile.am for texinfo/util.
 # Run automake in .. to produce Makefile.in from this.
 #
@@ -11,7 +11,7 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 bin_PROGRAMS = ginstall-info texindex
-bin_SCRIPTS = texi2dvi
+bin_SCRIPTS = texi2dvi texi2pdf
 
 # Use `ginstall-info' in the definition of PROGRAMS and in dependencies
 # because automake generates an install-info target in every Makefile (a
@@ -34,11 +34,12 @@ pkgdata_DATA = texinfo.cat
 texinfo.cat: texinfo-cat.in $(top_srcdir)/doc/version.texi
 	sed 's/__VERSION__/@VERSION@/g' texinfo-cat.in >$@
 
-# Most of these are for fun.  The only one that's really supported is texi2dvi.
+# Most of these are for fun.  The only official/installed ones are the
+# texi2* scripts.
 # 
 EXTRA_DIST = README deref.c dir-example fix-info-dir fixfonts \
   fixref.gawk gdoc gen-dir-node gendocs.sh gendocs_template infosrch \
   install-info-html outline.gawk \
-  prepinfo.awk tex3patch texi-docstring-magic.el texi2dvi txitextest \
+  prepinfo.awk tex3patch texi-docstring-magic.el texi2dvi texi2pdf txitextest \
   $(dist_pkgdata_DATA) texinfo-cat.in
 CLEANFILES = $(pkgdata_DATA)
